# ai-image-analyzer

./: .env  README.md  main.py  pyproject.toml
frontend/image-classifier-frontend/: index.html  package-lock.json  package.json
frontend/image-classifier-frontend/src/: App.jsx
