[project]
name = "ai-image-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "opencv-python>=4.12.0.88",
    "python-multipart>=0.0.20",
    "tensorflow>=2.20.0",
    "uvicorn>=0.35.0",
]
